# GnomeAdventure

./: .gitignore  CMakeLists.txt  GnomeAdventure.sln  README.md  conanfile.txt
GnomeAdventure/: App.xaml  App.xaml.cs  GnomeAdventure.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
GnomeAdventure/Properties/: AssemblyInfo.cs
GnomeAdventure/Scenes/Act1/: Bandits.xaml  Bandits.xaml.cs  Foraging.xaml  Foraging.xaml.cs  Intro.xaml  Intro.xaml.cs  Potion.xaml  Potion.xaml.cs  Ruins.xaml  Ruins.xaml.cs
GnomeAdventure/Scenes/Act2/: BadCity.xaml  BadCity.xaml.cs  CityIntro.xaml  CityIntro.xaml.cs  GoodCity.xaml  GoodCity.xaml.cs  GuildMasterQuests.xaml  GuildMasterQuests.xaml.cs  Home.xaml  Home.xaml.cs  Resolution.xaml  Resolution.xaml.cs  Town.xaml  Town.xaml.cs
UnitTests/: Package.appxmanifest  UnitTests.csproj
game/: AGFInterpreter.cpp  CMakeLists.txt  GnomeAdventure.hpp  README.md
game/GnomeAdventure/: GnomeAdventure.cpp
game/libAdventureGame/: AGFInterpreter.hpp
game/tests/: README.md
include/: AnimationQueue.hpp  AudioStore.hpp  Event.hpp  GUIObject.hpp  GameApp.hpp  GameObject.hpp  GameObjectImpl.hpp  InputHandler.hpp  README.md  common.hpp  trace.hpp
tests/: .GameObject_handling_test.cpp.swp  AudioStore_test.cpp  CMakeLists.txt  GameObject_handling_test.cpp  input_event_text.cpp  sanity_test.cpp  sfml_test.cpp
util/: common.hpp
