add_executable(sanity_test sanity_test.cpp)
add_executable(sfml_test sfml_test.cpp)
#add_executable(events_test events_test.cpp)
#add_executable(entity_test entity_test.cpp)
#add_executable(menu_test menu_test.cpp)
#add_executable(animation_test animation_test.cpp)
#add_executable(single_scene_test single_scene_test.cpp)
#add_executable(multiscene_test multiscene_test.cpp)
#target_link_libraries(sanity_test        ${ALL_SFML_LIBS})
target_link_libraries(sanity_test sfml-graphics sfml-audio sfml-window sfml-system pthread)
target_link_libraries(sfml_test sfml-graphics sfml-audio sfml-window sfml-system pthread)
#target_link_libraries(events_test        ${ALL_SFML_LIBS})
#target_link_libraries(entity_test        ${ALL_SFML_LIBS})
#target_link_libraries(menu_test          ${ALL_SFML_LIBS})
#target_link_libraries(animation_test     ${ALL_SFML_LIBS})
#target_link_libraries(single_scene_test  ${ALL_SFML_LIBS})
#target_link_libraries(multiscene_test    ${ALL_SFML_LIBS})
